--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
-    <!-- three ways to include JS in HTML file, will stick with external source for now -->
-    <!-- <script> console.log("Hello World!") </script> -->
-    <!-- <button onclick="alert('Hello World!')"> Welcome Message </button> -->
-    <script src="rock-paper-scissors.js"></script>
+    <!-- add 3 buttons for rps selections with event listeners -->
+    <h1>Please Select Rock, Paper, or Scissors to start game.</h1>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 </body>
 </html>
