refactor rps round results as paragraph instead of alert

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <h2>Round Result</h2>
+    <p id="result"></p>
 </body>
 </html>
